# db_architecture_labs

./: README.md
lab_1/: .gitignore  docker-compose.yaml
lab_1/src/lab_1/: pyproject.toml
lab_1/src/lab_1/lab_1/command/: mongodb.py  redis.py
lab_2/: .gitignore  README.md  docker-compose.yaml
lab_2/src/lab_2/: pyproject.toml
lab_2/src/lab_2/lab_2/: generator.py  main.py
